--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 		<title>SKKU QR</title>
+		<script src="https://apis.google.com/js/api.js"></script>
+
 		<link rel="stylesheet" href="index.css" />
 	</head>
 	<body>
